# FastCopy

./: CMakeLists.txt  fibmap.c  hdparm.h  main.cpp  sysfs.c
